# music_style_classification

./: README.md  example.py  llm_music.py  preprocessing.py  pyproject.toml
notebooks/: PreProcessing.ipynb  SentimentAnalysis.ipynb  SongsClassifier.ipynb
output/: songs.csv
src/: music_classifier.py  preprocessing.py  sentiment-analysis.py
