[project]
name = "music-style-classification"
version = "0.1.0"
description = ""
authors = [
    {name = "João Lucas Flauzino Cassiano",email = "joaolucas.apoio@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "unidecode (>=1.3.8,<2.0.0)",
    "spacy (>=3.8.5,<4.0.0)",
    "huggingface-hub (>=0.30.2,<0.31.0)",
    "transformers (>=4.51.2,<5.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "protobuf (>=6.30.2,<7.0.0)",
    "accelerate (>=1.6.0,<2.0.0)",
    "optimum (>=1.24.0,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
